# Asaogea

./: .gitignore  Cargo.toml  imgui.ini  progression.md  todolist.md
crates/core/: Cargo.toml
crates/core/src/: application.rs  buffer.rs  command_buffer.rs  device.rs  engine.rs  imgui.rs  instance.rs  lib.rs  mesh.rs  options.rs  pipeline.rs  render_pass.rs  shader_module.rs  surface.rs  window.rs
crates/core/src/application/: input_manager.rs  mod.rs  window.rs
crates/core/src/application/gfx/: command_buffer.rs  descriptor_pool.rs  device.rs  imgui.rs  instance.rs  mod.rs  physical_device.rs  render_pass.rs  surface.rs  swapchain.rs
crates/core/src/application/gfx/frame_graph/: frame_graph.rs  frame_graph_definition.rs  frame_graph_instance.rs  mod.rs  render_pass.rs
crates/core/src/application/gfx/resources/: buffer.rs  descriptor_sets.rs  image.rs  mesh.rs  mod.rs  pipeline.rs  sampler.rs  shader_module.rs
crates/core/src/assets/: mod.rs
crates/core/src/assets/gltf_importer/: gltf_importer.rs
crates/core/src/core/: window.rs
crates/core/src/core/gfx/: command_buffer.rs  descriptor_pool.rs  device.rs  imgui.rs  instance.rs  mod.rs  physical_device.rs  queues.rs  surface.rs  swapchain.rs
crates/core/src/core/gfx/frame_graph/: frame_graph_definition.rs  frame_graph_instance.rs  mod.rs  renderer.rs
crates/core/src/core/gfx/resources/: buffer.rs  descriptor_sets.rs  image.rs  mesh.rs  pipeline.rs  sampler.rs  shader_module.rs
crates/core/src/core/gfx/ui/: context.rs  imgui.rs  mod.rs  ui.rs  (+1 more)
crates/core/src/test_app/: camera.rs  mod.rs  test_app.rs
(+15 files in other folders)
