[package]
name = "Asaogea"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "crates/*"
]
resolver = "2"

[dependencies]
core = {path = "crates/core"}
types = {path = "crates/types"}

tracing = "0.1.40"
tracing-subscriber = "0.3.18"
anyhow = "1.0.89"
vulkanalia = { version = "0.25.0" }
glam = "0.29.0"
imgui = "0.12.0"