[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
types = { path = "../types" }
shaders = { path = "../shaders" }
macros = { path = "../macros" }

vulkanalia = { version = "0.25.0", features = ["window", "libloading"] }
vulkanalia-vma = "0.2.0"
winit = "0.30.5"
anyhow = "1.0.89"
tracing = "0.1.40"
imgui = { version = "0.12.0", features = ["docking"] }
rand = "0.9.0-alpha.2"