[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
types = { path = "../types" }
shaders = { path = "../shaders" }
macros = { path = "../macros" }
job-sys = { path = "../job-sys" }

vulkanalia = { version = "0.25.0", features = ["window", "libloading"] }
vulkanalia-vma = "0.2.0"
winit = "0.30.5"
anyhow = "1.0.89"
tracing = "0.1.40"
imgui = { version = "0.12.0", features = ["docking"] }
rand = "0.8.5"
glam = "0.29.0"
gltf = "1.4.1"
base64 = "0.22.1"
image = "0.25.4"
lockfree = "0.5.1"